[project]
name = "nasa-odsi-contributor-network"
version = "0.1.0"
description = "NASA ODSI contributor network site (overlay over developmentseed/contributor-network)"
requires-python = ">=3.13"
dependencies = [
    "contributor-network @ git+https://github.com/developmentseed/contributor-network@main",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
